examples/testing/errors/lib/backend.dart
class MyBackend {
  void sendError(Object error, StackTrace stack) {}
}
